objects/tffa__Note__c.object
<CustomObject>
    <description>Captures notes associated with different entities in the application</description>
    <fields>
        <fullName>tffa__Content__c</fullName>
        <description>Captures contents of the notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SenderId__c</fullName>
        <description>Reference to sending party/user object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SenderName__c</fullName>
        <description>Denormalized name of sending party/user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Title__c</fullName>
        <description>Captures title of the note</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Note</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>